# rust-bazel-scratch

./: .gitignore  Cargo.toml  README.md  WORKSPACE  cargo-bazel-lock.json
scratch/: BUILD.bazel  Cargo.toml
scratch-bin/: BUILD.bazel  Cargo.toml
scratch-bin/src/: main.rs
scratch/src/: lib.rs
